--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -18,7 +18,7 @@ title: EthPyramid Blog
 description: >- # this means to ignore newlines until "baseurl:"
         Official blog for EthPyramid
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "/blog" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.ethpyramid.com" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ethpyramid
 #github_username:  jekyll
 
