--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -14,6 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: EthPyramid Blog
+name: EthPyramid Blog
 #email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
         Official blog for EthPyramid
