--- a/blog/_config.yml
+++ b/blog/_config.yml
@@ -13,11 +13,13 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
+
 title: EthPyramid Blog
 name: EthPyramid Blog
 #email: your-email@example.com
-description: >- # this means to ignore newlines until "baseurl:"
-        Official blog for EthPyramid
+
+description: Official blog for EthPyramid
+
 baseurl: "" # the subpath of your site, e.g. /blog
 
 url: "https://blog.ethpyramid.com" # the base hostname & protocol for your site, e.g. http://example.com
@@ -29,21 +31,10 @@ share:
 
 social:
         twitter: ethpyramid
+        rss: feed.xml
 
 # Build settings
 markdown: kramdown
 
 plugins:
   - jekyll-feed
-
-# Exclude from processing.
-# The following items will not be processed, by default. Create a custom list
-# to override the default setting.
-# exclude:
-#   - Gemfile
-#   - Gemfile.lock
-#   - node_modules
-#   - vendor/bundle/
-#   - vendor/cache/
-#   - vendor/gems/
-#   - vendor/ruby/
